--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,9 +8,25 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #000;
+  color: #FFF
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.fade_in {
+  animation: fadeIn ease 5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
