--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -1,25 +1,69 @@
 .main {
   display: flex;
   flex-direction: row;
-  padding: 2rem;
   min-height: 100vh;
-  background-image: url('../../public/darth-vader.jpg');
+  background-image: url('../../../public/darth-vader.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: inset 0px -25px 90px 90px #000;
+
+
 }
 
-.container {
-  width: 100%;
-	margin-top: 50px;
+.nav {
+  min-width: 100vw;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  background-color: #0000008f;
 }
 
-.message {
-  max-width: 400px;
+.links {
+  padding: 2rem;
+}
+
+.form {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.button {
+	background: transparent;
+	height: fit-content;
+	color: inherit;
+	outline: none;
+	appearance: none;
+	font-size: 1rem;
+	font-family: inherit;
+	border: 1px solid #FFF;
+	border-radius:  5px;
+	cursor: pointer;
+	padding: 1rem;
+  margin: 2px;
+	position: relative;
+  opacity: 1;
+}
+
+.button:hover,
+.button:visited {
+	text-decoration: underline;
+	background-color: rgb(34,255,89);
+	color: #000;
+	border: 1px solid #000;
+	transition-property: background-color,color, border;
+  transition-duration: .15s;
+}
+
+.input {
+  height: 2rem;
+  outline: none;
+  border-radius: 5px;
+  width: 35vw;
+  padding: 1rem
+
 }
 
 /* Mobile */
@@ -32,26 +76,4 @@
 
 }
 
-.button {
-	background: transparent;
-	height: fit-content;
-	color: inherit;
-	outline: none;
-	appearance: none;
-	font-size: 1.5rem;
-	font-family: inherit;
-	border: 1px solid #FFF;
-	border-radius:  5px;
-	cursor: pointer;
-	padding: 15px;
-	position: relative;
-}
 
-.button:hover {
-	text-decoration: underline;
-	background-color: rgb(34,255,89);
-	color: #000;
-	border: 1px solid #000;
-	transition-property: background-color,color, border;
-  transition-duration: .15s;
-}
