--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -29,7 +29,13 @@
   flex-direction: column;
   align-items: center;
 }
+.radio_button {
+display: flex;
+background: transparent;
+color: #FFF;
+border: none
 
+}
 
 .button {
 	background: transparent;
