--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -29,12 +29,16 @@
   flex-direction: column;
   align-items: center;
 }
+
 .radio_button {
 display: flex;
 background: transparent;
 color: #FFF;
-border: none
+border: none;
 
+}
+.radio_button:focus {
+  outline: none
 }
 
 .button {
