--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -88,3 +88,25 @@ border: none;
 }
 
 
+.card_container {
+  display: flex;
+  justify-content: center;
+
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+.loading {
+  animation: rotation 5s infinite linear;
+  
+
+}
+
+
