--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -81,13 +81,25 @@
 }
 
 /* Mobile */
-@media (max-width: 700px) {
+@media (max-width: 500px) and (orientation: portrait) {
+  .loading {
+    animation: rotation 5s infinite linear;
+    width: 256px;
+    height: 200px;
+    position: relative;
+  }
   
 }
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
-
+  .loading {
+    animation: rotation 5s infinite linear;
+    width: 256px;
+    height: 200px;
+    position: relative;
+    overflow: hidden;
+  }
 }
 
 
@@ -125,6 +137,9 @@
 
 .loading {
   animation: rotation 5s infinite linear;
+  width: 512px;
+  height: 400px;
+  position: relative;
 }
 
 .dialog {
